@@ -491,6 +491,7 @@ set(DISSECTOR_SRC
 	dissectors/packet-cipmotion.c
 	dissectors/packet-cipsafety.c
 	dissectors/packet-cisco-erspan.c
+	dissectors/packet-cisco-marker.c
 	dissectors/packet-cisco-metadata.c
 	dissectors/packet-cisco-oui.c
 	dissectors/packet-cisco-sm.c
