@@ -408,6 +408,7 @@ DISSECTOR_SRC = \
 	packet-cipmotion.c	\
 	packet-cipsafety.c	\
 	packet-cisco-erspan.c	\
+	packet-cisco-marker.c	\
 	packet-cisco-metadata.c	\
 	packet-cisco-oui.c	\
 	packet-cisco-sm.c	\
