@@ -45,6 +45,7 @@ _Non-empty section placeholder._
 --sort-and-group--
 
 === New Protocol Support
+CISCO ERSPAN3 Marker
 Nokia Intelligent Service Interface (ISI)
 
 // Items in --sort-and-group-- blocks will be sorted and comma-separated.
